Projeto_Compilador/tests/cases/fail/malformedProgramHeading.pas
program HelloWorld(broken,, externals,    list);
begin
	writeln('Hello, World!');
end.